# netbox-service-offerings-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml  versions.sh
.github/workflows/: ci-cd.yml  deploy.yml  renew-cert.yml
ci/docker/: .env.example  Dockerfile-Plugins  docker-compose.yml  plugin_requirements.txt
ci/docker/configuration/: plugins.py
ci/docker/nginx/: netbox.conf.template
ci/scripts/: issue-cert.sh  pre-cleanup.sh  smoke-test.sh  test-deployment.py
csdm/: __init__.py  choices.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  panels.py  tables.py  urls.py  views.py
csdm/api/: serializers.py  urls.py  views.py
csdm/migrations/: 0001_initial.py
csdm/tests/: test_api.py  test_models.py
docker/: .env.example  Dockerfile-Plugins  docker-compose.yml  plugin_requirements.txt
docker/configuration/: plugins.py
scripts/: issue-cert.sh  pre-cleanup.sh
service_specification/: __init__.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  panels.py  tables.py  urls.py  views.py
service_specification/api/: serializers.py  urls.py  views.py
service_specification/migrations/: 0001_initial.py  0002_service_info_ci_function_lifecycle_nullable.py
service_specification/tests/: test_api.py  test_models.py
