[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-csdm"
# Kept in sync with CSDM_PLUGIN_VERSION in versions.sh — the Code-Review
# stage of ci-cd.yml fails the build if these two drift apart.
version = "1.0.0"
description = "Business/Technical Service Offerings (CSDM) plugin for NetBox"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.packages.find]
include = ["csdm*"]

[tool.setuptools.package-data]
# setuptools only auto-includes .py files by default; templates (and any
# future static assets) must be listed explicitly or they're silently
# dropped from the built wheel, leaving views working in dev (running from
# the checkout) but raising TemplateDoesNotExist once installed from a
# built package.
csdm = ["templates/**/*", "static/**/*"]

[tool.ruff]
# Baseline copied from netbox-community/netbox's own pyproject.toml so
# plugin code style matches upstream conventions. target-version set to
# py310 (not netbox core's py312) to match this plugin's own
# requires-python above — ruff shouldn't suggest syntax our stated minimum
# doesn't support.
line-length = 120
indent-width = 4
respect-gitignore = true
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
    "E1",   # pycodestyle errors: indentation-related
    "E2",   # pycodestyle errors: whitespace-related
    "E3",   # pycodestyle errors: blank lines / spacing around definitions
    "E501", # pycodestyle: line too long (enforced via line-length above)
    "W",    # pycodestyle warnings
    "I",    # import sorting (isort-equivalent)
]
# E1/E2/E3 need preview mode to take effect at all (matches upstream NetBox's
# own pyproject.toml, which sets this for the same reason).
preview = true

[tool.ruff.format]
# Ruff's formatter defaults to double quotes; both this codebase and NetBox
# core itself consistently use single quotes, so override to match rather
# than have `ruff format` fight every file that was already written this way.
quote-style = "single"
indent-style = "space"
line-ending = "lf"
